--- a/common.uk.po
+++ b/common.uk.po
@@ -10,6 +10,7 @@
 # Ігор Андреєв <ihor@noleron.com>, 2021
 # Ігор Андреєв <ihor@noleron.com>, 2021
 # Illia Serediuk, 2022
+# Illia Serediuk, 2022
 # Dmitro Sokhin <gamebot@ex.ua>, 2015
 # Ігор Андреєв <ihor@noleron.com>, 2021
 msgid ""
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-04 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Illia Serediuk, 2022\n"
+"Last-Translator: Ігор Андреєв <ihor@noleron.com>, 2021\n"
 "Language-Team: Ukrainian (http://www.transifex.com/team-xonotic/xonotic/"
 "language/uk/)\n"
 "Language: uk\n"
