--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -147,7 +147,7 @@ msgstr "副火力"
 #: qcsrc/client/hud/panel/infomessages.qc:115
 #, c-format
 msgid "^1Press ^3%s^1 to change camera mode"
-msgstr ""
+msgstr "^1按 ^3%s^1 切换镜头模式"
 
 #: qcsrc/client/hud/panel/infomessages.qc:118
 #, c-format
@@ -182,12 +182,12 @@ msgstr "^2现在是^1热身^2阶段!"
 
 #: qcsrc/client/hud/panel/infomessages.qc:159
 msgid "^31^2 more player is needed for the match to start."
-msgstr ""
+msgstr "还需要 ^31^2 位玩家以开始竞赛。"
 
 #: qcsrc/client/hud/panel/infomessages.qc:161
 #, c-format
 msgid "^3%d^2 more players are needed for the match to start."
-msgstr ""
+msgstr "还需要 ^3%d^2 位玩家以开始竞赛。"
 
 #: qcsrc/client/hud/panel/infomessages.qc:167
 #, c-format
@@ -502,15 +502,15 @@ msgstr "重启地图"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:861
 msgid "QMCMD^End match"
-msgstr "结束比赛"
+msgstr "结束竞赛"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:864
 msgid "QMCMD^Reduce match time"
-msgstr "减少比赛时间"
+msgstr "减少竞赛时间"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:865
 msgid "QMCMD^Extend match time"
-msgstr "延长比赛时间"
+msgstr "延长竞赛时间"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:868
 msgid "QMCMD^Shuffle teams"
@@ -1057,7 +1057,7 @@ msgstr "^3%1.0f 分钟"
 #: qcsrc/client/hud/panel/scoreboard.qc:2304
 #, c-format
 msgid "^5%d^7/^5%d ^7players"
-msgstr ""
+msgstr "^5%d^7 / ^5%d^7 位玩家"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2305 qcsrc/client/main.qc:1441
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfotab.qc:43
@@ -1115,11 +1115,11 @@ msgstr "热身"
 
 #: qcsrc/client/hud/panel/timer.qc:131
 msgid "Warmup: no time limit"
-msgstr ""
+msgstr "热身：无时间限制"
 
 #: qcsrc/client/hud/panel/timer.qc:131
 msgid "Warmup: too few players"
-msgstr ""
+msgstr "热身：等待更多玩家"
 
 #: qcsrc/client/hud/panel/timer.qc:134
 msgid "Timeout"
@@ -1148,7 +1148,7 @@ msgstr "在统计信息中显示^2玩家名^7而非“^1匿名玩家^7”"
 
 #: qcsrc/client/hud/panel/vote.qc:119
 msgid "A vote has been called for:"
-msgstr "一轮投票被发起："
+msgstr "发起了一轮投票："
 
 #: qcsrc/client/hud/panel/vote.qc:121
 msgid "Allow servers to store and display your name?"
@@ -1186,7 +1186,7 @@ msgstr "弹药耗尽"
 
 #: qcsrc/client/hud/panel/weapons.qc:635
 msgid "Don't have"
-msgstr "没有"
+msgstr "未持有"
 
 #: qcsrc/client/hud/panel/weapons.qc:639
 msgid "Unavailable"
@@ -1194,7 +1194,7 @@ msgstr "不可用"
 
 #: qcsrc/client/main.qc:300
 msgid "Trying to remove a team which is not in the teamlist!"
-msgstr "正在移除不在队伍表的队伍！"
+msgstr "正在移除不在队伍列表中的队伍！"
 
 #: qcsrc/client/main.qc:1149 qcsrc/menu/xonotic/dialog_hudpanel_physics.qc:51
 msgid "qu/s"
@@ -1219,7 +1219,7 @@ msgstr "海里每时"
 #: qcsrc/client/main.qc:1364
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:26
 msgid "All Weapons Arena"
-msgstr "所有武器竞技"
+msgstr "全武器竞技"
 
 #: qcsrc/client/main.qc:1365
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:27
@@ -1294,27 +1294,27 @@ msgstr "游戏类型："
 
 #: qcsrc/client/main.qc:1453
 msgid "This match supports"
-msgstr ""
+msgstr "此竞赛支持"
 
 #: qcsrc/client/main.qc:1455
 #, c-format
 msgid "%d players"
-msgstr ""
+msgstr "%d 位玩家"
 
 #: qcsrc/client/main.qc:1457
 #, c-format
 msgid "%d to %d players"
-msgstr ""
+msgstr "%d 到 %d 位玩家"
 
 #: qcsrc/client/main.qc:1459
 #, c-format
 msgid "%d players maximum"
-msgstr ""
+msgstr "至多 %d 位玩家"
 
 #: qcsrc/client/main.qc:1461
 #, c-format
 msgid "%d players minimum"
-msgstr ""
+msgstr "至少 %d 位玩家"
 
 #: qcsrc/client/main.qc:1466
 msgid "Active modifications:"
@@ -1326,7 +1326,7 @@ msgstr "特殊游戏提示："
 
 #: qcsrc/client/main.qc:1476
 msgid "Server's message"
-msgstr ""
+msgstr "服务器消息"
 
 #: qcsrc/client/main.qc:1570
 #, c-format
@@ -1418,12 +1418,12 @@ msgstr "歼灭所有敌方团队玩家来取得胜利"
 #: qcsrc/common/gamemodes/gamemode/clanarena/clanarena.qh:40
 #: qcsrc/common/gamemodes/gamemode/freezetag/freezetag.qh:43
 msgid "Round limit:"
-msgstr ""
+msgstr "此轮限制："
 
 #: qcsrc/common/gamemodes/gamemode/clanarena/clanarena.qh:40
 #: qcsrc/common/gamemodes/gamemode/freezetag/freezetag.qh:43
 msgid "The amount of rounds won needed before the match will end"
-msgstr ""
+msgstr "在竞赛结束前需要取胜的轮数"
 
 #: qcsrc/common/gamemodes/gamemode/ctf/cl_ctf.qc:202
 msgid "Capture time rankings"
@@ -1445,7 +1445,7 @@ msgstr "夺取限制："
 
 #: qcsrc/common/gamemodes/gamemode/ctf/ctf.qh:30
 msgid "The amount of captures needed before the match will end"
-msgstr "此轮比赛结束所需要的夺旗数"
+msgstr "此轮竞赛结束所需要的夺旗数"
 
 #: qcsrc/common/gamemodes/gamemode/cts/cl_cts.qc:41
 #: qcsrc/common/gamemodes/gamemode/race/cl_race.qc:178
@@ -1480,7 +1480,7 @@ msgstr "统治"
 #: qcsrc/common/gamemodes/gamemode/keyhunt/keyhunt.qh:39
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qh:47
 msgid "The amount of points needed before the match will end"
-msgstr "此轮比赛结束所需要的分数"
+msgstr "此轮竞赛结束所需要的分数"
 
 #: qcsrc/common/gamemodes/gamemode/duel/duel.qh:9
 msgid "Duel"
@@ -1550,11 +1550,11 @@ msgstr "把球踢进对方球门，保护自己的球门"
 
 #: qcsrc/common/gamemodes/gamemode/nexball/nexball.qh:25
 msgid "Goal limit:"
-msgstr ""
+msgstr "进球限制"
 
 #: qcsrc/common/gamemodes/gamemode/nexball/nexball.qh:25
 msgid "The amount of goals needed before the match will end"
-msgstr "此轮比赛结束所需要的进球数"
+msgstr "此轮竞赛结束所需要的进球数"
 
 #: qcsrc/common/gamemodes/gamemode/nexball/weapon.qh:9
 msgid "Ball Stealer"
@@ -1678,11 +1678,11 @@ msgstr "击杀限制："
 
 #: qcsrc/common/mapinfo.qh:89
 msgid "The amount of frags needed before the match will end"
-msgstr "此轮比赛结束所需要的杀敌数"
+msgstr "此轮竞赛结束所需要的杀敌数"
 
 #: qcsrc/common/minigames/cl_minigames.qc:379
 msgid "It's your turn"
-msgstr "该轮到你了"
+msgstr "轮到你了"
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:363
 #: qcsrc/menu/xonotic/dialog_gamemenu.qc:67
@@ -1857,11 +1857,11 @@ msgstr "电脑"
 
 #: qcsrc/common/minigames/minigame/pong.qc:626
 msgid "Press ^1Start Match^7 to start the match with the current players"
-msgstr "按^1开始比赛^7来与当前玩家开始比赛"
+msgstr "点击^1开始^7来与当前玩家进行游戏"
 
 #: qcsrc/common/minigames/minigame/pong.qc:698
 msgid "Start Match"
-msgstr "开始比赛"
+msgstr "开始"
 
 #: qcsrc/common/minigames/minigame/pong.qc:699
 msgid "Add AI player"
@@ -1878,19 +1878,19 @@ msgstr "推拉"
 #: qcsrc/common/minigames/minigame/pp.qc:456
 #: qcsrc/common/minigames/minigame/ttt.qc:339
 msgid "Select \"^1Next Match^7\" on the menu for a rematch!"
-msgstr "选择菜单上的“^1下一轮^7”以再次比赛！"
+msgstr "选择菜单上的“^1下一轮^7”再进行一轮游戏！"
 
 #: qcsrc/common/minigames/minigame/pp.qc:457
 #: qcsrc/common/minigames/minigame/pp.qc:463
 #: qcsrc/common/minigames/minigame/ttt.qc:340
 #: qcsrc/common/minigames/minigame/ttt.qc:346
 msgid "Select \"^1Next Match^7\" on the menu to start a new match!"
-msgstr "选择菜单上的“^1下一轮^7”开始新的比赛！"
+msgstr "选择菜单上的“^1下一轮^7”开始新游戏！"
 
 #: qcsrc/common/minigames/minigame/pp.qc:464
 #: qcsrc/common/minigames/minigame/ttt.qc:347
 msgid "Wait for your opponent to confirm the rematch"
-msgstr "等待对方玩家确认再次比赛"
+msgstr "等待对方玩家确认下一轮游戏"
 
 #: qcsrc/common/minigames/minigame/pp.qc:613
 #: qcsrc/common/minigames/minigame/ttt.qc:698
@@ -1916,7 +1916,7 @@ msgstr "剩余棋子：%s 颗"
 
 #: qcsrc/common/minigames/minigame/ps.qc:501
 msgid "No more valid moves"
-msgstr "没有有效的移动了"
+msgstr "没有可行的移动了"
 
 #: qcsrc/common/minigames/minigame/ps.qc:504
 msgid "Well done, you win!"
@@ -2363,7 +2363,7 @@ msgstr "^1服务器提示："
 
 #: qcsrc/common/notifications/all.inc:226
 msgid "^F4NOTE: ^BGSpectator chat is not sent to players during the match"
-msgstr "^F4注意：^BG比赛过程中旁观者的聊天不会被发送给玩家"
+msgstr "^F4注意：^BG竞赛过程中旁观者的聊天不会发送给玩家"
 
 #: qcsrc/common/notifications/all.inc:228
 #, c-format
@@ -2400,11 +2400,11 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:233
 msgid "^BGThe ^TC^TT^BG flag was returned to base by its owner"
-msgstr "^BG^TC^TT队^BG旗帜被它的所有者带回基地"
+msgstr "^BG^TC^TT队^BG旗帜被所有者返还基地"
 
 #: qcsrc/common/notifications/all.inc:234
 msgid "^BGThe flag was returned by its owner"
-msgstr "^BG旗帜被它的所有者带回"
+msgstr "^BG旗帜被所有者返还"
 
 #: qcsrc/common/notifications/all.inc:235
 msgid "^BGThe ^TC^TT^BG flag was destroyed and returned to base"
@@ -2426,24 +2426,24 @@ msgstr "^BG旗帜掉落在基地并自己返回"
 msgid ""
 "^BGThe ^TC^TT^BG flag fell somewhere it couldn't be reached and returned to "
 "base"
-msgstr "^BG^TC^TT队^BG旗帜掉落在无法到达的地方而自动回到基地"
+msgstr "^BG^TC^TT队^BG旗帜掉落在无法触及的地方而回到基地"
 
 #: qcsrc/common/notifications/all.inc:240
 msgid "^BGThe flag fell somewhere it couldn't be reached and returned to base"
-msgstr "^BG旗帜掉落在无法到达的地方而自动回到基地"
+msgstr "^BG旗帜掉落在无法触及的地方而回到基地"
 
 #: qcsrc/common/notifications/all.inc:241
 #, c-format
 msgid ""
 "^BGThe ^TC^TT^BG flag became impatient after ^F1%.2f^BG seconds and returned "
 "itself"
-msgstr "^BG^TC^TT队^BG旗帜在 ^F1%.2f^BG 秒后失去耐心而自动返回基地"
+msgstr "^BG^TC^TT队^BG旗帜在 ^F1%.2f^BG 秒后失去耐心而回到基地"
 
 #: qcsrc/common/notifications/all.inc:242
 #, c-format
 msgid ""
 "^BGThe flag became impatient after ^F1%.2f^BG seconds and returned itself"
-msgstr "^BG旗帜在 ^F1%.2f^BG 秒后失去耐心而自动返回基地"
+msgstr "^BG旗帜在 ^F1%.2f^BG 秒后失去耐心而回到基地"
 
 #: qcsrc/common/notifications/all.inc:243
 msgid "^BGThe ^TC^TT^BG flag has returned to the base"
@@ -2495,7 +2495,7 @@ msgstr "^F2你缺少一个 UID，超标准选项将不被保存或恢复"
 
 #: qcsrc/common/notifications/all.inc:258
 msgid "^F1Round already started, you will join the game in the next round"
-msgstr "^F1这轮比赛已经开始，你将在下一轮加入游戏"
+msgstr "^F1这轮竞赛已经开始，你将在下一轮加入游戏"
 
 #: qcsrc/common/notifications/all.inc:259
 msgid "^F2You will spectate in the next round"
@@ -2503,12 +2503,12 @@ msgstr "^F2你将在下一轮旁观"
 
 #: qcsrc/common/notifications/all.inc:261
 msgid "^F2Match is restarting..."
-msgstr ""
+msgstr "^F2竞赛正在重新开始……"
 
 #: qcsrc/common/notifications/all.inc:262
 #: qcsrc/common/notifications/all.inc:533
 msgid "^F4Countdown stopped!"
-msgstr ""
+msgstr "^F4倒计时已停止！"
 
 #: qcsrc/common/notifications/all.inc:264
 #, c-format
@@ -3317,7 +3317,7 @@ msgstr "^TC^TT队^BG得分！"
 msgid ""
 "^F2You have to become a player within the next %s, otherwise you will be "
 "kicked, because spectating isn't allowed at this time!"
-msgstr "^F2你必须在下 %s内成为玩家，否则将被踢出，这次不允许旁观！"
+msgstr "^F2你必须在 %s内参与游戏，否则将被踢出。现在不允许旁观！"
 
 #: qcsrc/common/notifications/all.inc:436
 #, c-format
@@ -3326,7 +3326,7 @@ msgstr "^BG%s^K1 拾起了超级武器"
 
 #: qcsrc/common/notifications/all.inc:438
 msgid "^BGYou cannot change to a larger team"
-msgstr "^BG你不可以切换至更大的队伍"
+msgstr "^BG你不可以换到更大的队伍"
 
 #: qcsrc/common/notifications/all.inc:439
 msgid "^BGYou are not allowed to change teams"
@@ -3344,7 +3344,8 @@ msgstr ""
 #, c-format
 msgid ""
 "^F4NOTE: ^BGThe server is running ^F1Xonotic %s^BG, you have ^F2Xonotic %s"
-msgstr "^F4注意：^BG此服务器在运行 ^F1Xonotic %s^BG，此客户端为 ^F2Xonotic %s"
+msgstr ""
+"^F4注意：^BG此服务器在运行 ^F1Xonotic %s^BG，你的客户端为 ^F2Xonotic %s"
 
 #: qcsrc/common/notifications/all.inc:443
 #, c-format
@@ -3700,7 +3701,7 @@ msgstr "^BG在 ^F4%s^BG内摧毁了目标！"
 #: qcsrc/common/notifications/all.inc:533
 #, c-format
 msgid "%s players are needed for this match."
-msgstr ""
+msgstr "此轮竞赛需要 %s 位玩家。"
 
 #: qcsrc/common/notifications/all.inc:534
 msgid "^BGBegin!"
@@ -3717,7 +3718,7 @@ msgstr "^BG第 %s 轮即将开始"
 
 #: qcsrc/common/notifications/all.inc:537
 msgid "^F4Round cannot start"
-msgstr "^F4此轮无法开始"
+msgstr "^F4这一轮无法开始"
 
 #: qcsrc/common/notifications/all.inc:542
 msgid "^F2Don't camp!"
@@ -4270,6 +4271,8 @@ msgid ""
 "^K1You may not join the game at this time.\n"
 "This match is limited to ^F2%s^BG players."
 msgstr ""
+"^K1你现在不可以参加这轮游戏。\n"
+"这轮竞赛限制为 ^F2%s^BG 位玩家。"
 
 #: qcsrc/common/notifications/all.inc:700
 msgid "^BGYou picked up the ball"
@@ -4317,14 +4320,14 @@ msgstr "^BG你带着^TC^TT队^BG钥匙开局"
 
 #: qcsrc/common/notifications/all.inc:710
 msgid "^BGYou have no lives left, you must wait until the next match"
-msgstr "^BG你已耗尽生命，你必须等待至下一轮比赛"
+msgstr "^BG你已耗尽生命，你必须等待至下一轮竞赛"
 
 #: qcsrc/common/notifications/all.inc:711
 msgid ""
 "^F4WARNING:^BG you can't rejoin this match after spectating.\n"
 "Use the same command again to spectate anyway."
 msgstr ""
-"^F4警告：^BG在进入旁观模式后，不能重新加入此局比赛。\n"
+"^F4警告：^BG在进入旁观模式后，不能重新加入此局竞赛。\n"
 "再次运行此指令以旁观。"
 
 #: qcsrc/common/notifications/all.inc:713
@@ -4437,7 +4440,7 @@ msgid ""
 "^F2Now playing ^F4OVERTIME^F2!\n"
 "Keep fragging until we have a winner!"
 msgstr ""
-"^F2现在是^F4超时模式^F2！\n"
+"^F2现在是^F4超时阶段^F2！\n"
 "继续杀敌、直到决胜！"
 
 #: qcsrc/common/notifications/all.inc:737
@@ -4445,7 +4448,7 @@ msgid ""
 "^F2Now playing ^F4OVERTIME^F2!\n"
 "Keep scoring until we have a winner!"
 msgstr ""
-"^F2现在是^F4超时模式^F2！\n"
+"^F2现在是^F4超时阶段^F2！\n"
 "尽全力进球、直到决胜！"
 
 #: qcsrc/common/notifications/all.inc:738
@@ -4456,7 +4459,7 @@ msgid ""
 "The more control points your team holds,\n"
 "the faster the enemy generator decays"
 msgstr ""
-"^F2现在是^F4超时模式^F2！\n"
+"^F2现在是^F4超时阶段^F2！\n"
 "\n"
 "发电机开始衰减。\n"
 "团队占领的控制点越多，\n"
@@ -4468,8 +4471,8 @@ msgid ""
 "^F2Now playing ^F4OVERTIME^F2!\n"
 "^BGAdded ^F4%s^BG to the game!"
 msgstr ""
-"^F2现在是^F4超时模式^F2！\n"
-"^BG将 ^F4%s^BG 加入了游戏！"
+"^F2现在是^F4超时阶段^F2！\n"
+"^BG为游戏添加了 ^F4%s^BG！"
 
 #: qcsrc/common/notifications/all.inc:741
 msgid "^K1In^BG-portal created"
@@ -4489,7 +4492,7 @@ msgstr "^F2神力给你的武器融入毁灭性的力量"
 
 #: qcsrc/common/notifications/all.inc:746
 msgid "^F2Strength has worn off"
-msgstr "^F2神力已失效"
+msgstr "^F2神力已解除"
 
 #: qcsrc/common/notifications/all.inc:748
 msgid "^F2Shield surrounds you"
@@ -4497,7 +4500,7 @@ msgstr "^F2护盾环绕着你"
 
 #: qcsrc/common/notifications/all.inc:749
 msgid "^F2Shield has worn off"
-msgstr "^F2护盾已失效"
+msgstr "^F2护盾已解除"
 
 #: qcsrc/common/notifications/all.inc:751
 msgid "^F2You are on speed"
@@ -4505,7 +4508,7 @@ msgstr "^F2你获得了加速"
 
 #: qcsrc/common/notifications/all.inc:752
 msgid "^F2Speed has worn off"
-msgstr "^F2加速已失效"
+msgstr "^F2加速已解除"
 
 #: qcsrc/common/notifications/all.inc:754
 msgid "^F2You are invisible"
@@ -4513,7 +4516,7 @@ msgstr "^F2你现在隐身"
 
 #: qcsrc/common/notifications/all.inc:755
 msgid "^F2Invisibility has worn off"
-msgstr "^F2隐身已失效"
+msgstr "^F2隐身已解除"
 
 #: qcsrc/common/notifications/all.inc:757
 msgid "^F2The race is over, finish your lap!"
@@ -4530,7 +4533,7 @@ msgstr "^BG还有更多……"
 #: qcsrc/common/notifications/all.inc:761
 #, c-format
 msgid "^BGOnly %s^BG more to go..."
-msgstr "^BG仅还剩 %s^BG 个……"
+msgstr "^BG还剩 %s^BG 个……"
 
 #: qcsrc/common/notifications/all.inc:763
 msgid "^F2Superweapons have broken down"
@@ -4673,7 +4676,7 @@ msgstr "杀戮！"
 #: qcsrc/common/notifications/all.qh:456
 #, c-format
 msgid "%s^K1 executed MAYHEM! %s^BG"
-msgstr "%s^K1 取得了【混乱】！%s^BG"
+msgstr "%s^K1 释发【混乱】！%s^BG"
 
 #: qcsrc/common/notifications/all.qh:456
 #, c-format
@@ -5811,7 +5814,7 @@ msgstr "无说明"
 msgid ""
 "Entity field %s.%s (%s) is not whitelisted. If you believe this is an error, "
 "please file an issue."
-msgstr "实体域 %s.%s (%s) 未列入白名单。如果你确认这是一个错误，请报告问题"
+msgstr "实体域 %s.%s (%s) 未列入白名单。如果你确认这是一个错误，请报告问题。"
 
 #: qcsrc/lib/string.qh:186
 #, c-format
@@ -6029,7 +6032,7 @@ msgstr "过去的贡献者"
 
 #: qcsrc/menu/xonotic/cvarlist.qc:73
 msgid "forced to be saved to config.cfg"
-msgstr "强制保存到 config.cfg"
+msgstr "强制保存到了 config.cfg"
 
 #: qcsrc/menu/xonotic/cvarlist.qc:79 qcsrc/menu/xonotic/cvarlist.qc:89
 msgid "will not be saved"
@@ -6074,8 +6077,8 @@ msgid ""
 "player name to get started.  You can change these options later through the "
 "menu system."
 msgstr ""
-"欢迎来到 Xonotic，请选择你的语言、输入玩家名称以开始。之后也可以在主菜单更"
-"改。"
+"欢迎来到 Xonotic，请选择你的语言、输入玩家名称以开始。这些选项随后可以在有关"
+"选项修改。"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:50
 #: qcsrc/menu/xonotic/dialog_settings_input_userbind.qc:28
@@ -6089,11 +6092,11 @@ msgstr "你在游戏里的名字"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:74
 msgid "Text language:"
-msgstr "文本语言："
+msgstr "文字语言："
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:83
 msgid "Allow player statistics to use your nickname at stats.xonotic.org?"
-msgstr "允许 stats.xonotic.org 使用你的昵称做玩家统计？"
+msgstr "允许 stats.xonotic.org 在玩家统计中使用你的昵称吗？"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:89
 msgid "Undecided"
@@ -7007,7 +7010,7 @@ msgstr "时间限制："
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create.qc:83
 msgid "Timelimit in minutes that when hit, will end the match"
-msgstr "以分钟计的时间限制，当超过时会结束比赛"
+msgstr "以分钟计的时间限制，当超过时会结束竞赛"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create.qc:84
 #, c-format
@@ -7570,12 +7573,12 @@ msgstr "播放"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_startconfirm.qc:13
 msgid "Playing a demo will disconnect you from the current match."
-msgstr "播放演示将断开你当前的比赛"
+msgstr "播放演示将使你离开当前的竞赛"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_startconfirm.qc:15
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_timeconfirm.qc:15
 msgid "Do you really wish to disconnect now?"
-msgstr "你真的希望现在断开连接吗？"
+msgstr "你真的想要离开吗？"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_startconfirm.qh:6
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_timeconfirm.qh:6
@@ -7584,7 +7587,7 @@ msgstr "断开"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_demo_timeconfirm.qc:13
 msgid "Timing a demo will disconnect you from the current match."
-msgstr "定时演示将断开你当前的比赛"
+msgstr "全速演示将使你离开当前的竞赛"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_media_musicplayer.qc:37
 msgid "MUSICPL^Add"
@@ -9948,7 +9951,7 @@ msgstr "路径点编辑菜单"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:12
 msgid "Leave current match"
-msgstr "离开当前比赛"
+msgstr "离开当前竞赛"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:14
 msgid "Stop demo"
@@ -9972,11 +9975,11 @@ msgstr "离开当前任务关卡"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:30
 msgid "Leave current singleplayer match"
-msgstr "离开当前单人比赛"
+msgstr "离开当前单人竞赛"
 
 #: qcsrc/menu/xonotic/leavematchbutton.qc:32
 msgid "Leave current multiplayer match / Disconnect from the server"
-msgstr "离开当前多人比赛 / 断开与服务器的连接"
+msgstr "离开当前多人竞赛 / 断开与服务器的连接"
 
 #: qcsrc/menu/xonotic/mainwindow.qc:75 qcsrc/menu/xonotic/mainwindow.qc:78
 msgid "Do not press this button again!"
@@ -9985,7 +9988,7 @@ msgstr "不要再按这个按钮 ！"
 #: qcsrc/menu/xonotic/maplist.qc:294
 msgid ""
 "Huh? Can't play this (m is NULL). Refiltering so this won't happen again."
-msgstr "嗯？无法游玩此地图（m 为 NULL）。正在重新过滤，使之不再发生。"
+msgstr "嗯？无法游玩此地图（m 为 NULL）。正在重新过滤，使这不再发生。"
 
 #: qcsrc/menu/xonotic/maplist.qc:302
 #, c-format
@@ -9996,7 +9999,7 @@ msgstr "%s 的 Xonotic 服务器"
 msgid ""
 "Huh? Can't play this (invalid game type). Refiltering so this won't happen "
 "again."
-msgstr "嗯？无法游玩此地图（无效游戏模式）。正在重新过滤，使之不再发生。"
+msgstr "嗯？无法游玩此地图（无效游戏模式）。正在重新过滤，使这不再发生。"
 
 #: qcsrc/menu/xonotic/playerlist.qc:102 qcsrc/menu/xonotic/playerlist.qc:112
 msgid "spectator"
@@ -10239,7 +10242,7 @@ msgstr "加入："
 
 #: qcsrc/menu/xonotic/statslist.qc:104
 msgid "Last match:"
-msgstr "最后的比赛："
+msgstr "最后的竞赛："
 
 #: qcsrc/menu/xonotic/statslist.qc:111
 msgid "Time played:"
@@ -10253,7 +10256,7 @@ msgstr "最喜欢的地图："
 #: qcsrc/menu/xonotic/statslist.qc:245
 #, c-format
 msgid "Matches:"
-msgstr "比赛局数："
+msgstr "竞赛局数："
 
 #: qcsrc/menu/xonotic/statslist.qc:155
 #, c-format
