--- a/common.de.po
+++ b/common.de.po
@@ -8,6 +8,7 @@
 # TheTrueBrot <noah.schluessel@gmail.com>, 2015
 # cvcxc <hans.andersen72@yahoo.com>, 2013
 # divVerent <divVerent@gmail.com>, 2011,2013
+# divVerent <divVerent@gmail.com>, 2011,2013
 # divVerent <divVerent@gmail.com>, 2013-2015
 # cvcxc <hans.andersen72@yahoo.com>, 2013
 # cvcxc <hans.andersen72@yahoo.com>, 2013
