--- a/common.hu.po
+++ b/common.hu.po
@@ -7,6 +7,7 @@
 # Ákos RUSZKAI, 2012
 # c2e331a438add123670fbf39846b5de3_8c31b08 <d7888a78469511cd116b0058dd23f760_811520>, 2021
 # divVerent <divVerent@gmail.com>, 2011
+# divVerent <divVerent@gmail.com>, 2011
 # MmAaXx500 <viktor.balogh2000@gmail.com>, 2018
 # Peter Ferenczy <fpeterhu@gmail.com>, 2017
 # divVerent <divVerent@gmail.com>, 2011
