--- a/common.ru.po
+++ b/common.ru.po
@@ -19,7 +19,7 @@
 # Simple88, 2016
 # Simple88, 2016
 # Артём Котлубай, 2022
-# Артём Котлубай, 2022
+# Артём Котлубай <artemkotlubai@yandex.ru>, 2022
 msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
